--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Guinea Covid-19 cases Outbreak"
+    />
+    <meta 
+      name="description" 
+      content="Informations sur le Covid-19 Coronavirus en Guinée et en Afrique"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
